--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
     "@types/validator": "^13.11.1",
     "nodemon": "^3.0.1",
@@ -26,11 +27,13 @@
     "argon2": "^0.31.1",
     "config": "^3.3.9",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
+    "stripe": "^13.4.0",
     "uuid": "^9.0.0"
   }
 }
