--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/config": "^3.3.1",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
     "@types/validator": "^13.11.1",
