--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/config": "^3.3.1",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
     "@types/validator": "^13.11.1",
@@ -27,6 +28,7 @@
   "dependencies": {
     "argon2": "^0.31.1",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
