--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
     "start2": "nodemon --exec ts-node-esm ./**/*.ts",
-    "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js",
+    "start": "node dist/src/index.js",
+    "dev": "nodemon dist/src/index.js",
     "db:migrate:create": "node_modules/.bin/sequelize migration:generate --name"
   },
   "keywords": [],
